k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  # number of pods
  replicas: 3
  # this is used by the deployment to find the set of pods to control
  selector:
    matchLabels:
      component: web
  # pod template
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: stephengrider/multi-client
          ports:
            - containerPort: 3000
