k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  # number of pods
  replicas: 1
  # this is used by the deployment to find the set of pods to control
  selector:
    matchLabels:
      component: redis
  # pod template
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
