k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  # number of pods
  replicas: 3
  # this is used by the deployment to find the set of pods to control
  selector:
    matchLabels:
      component: server
  # pod template
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: stephengrider/multi-server
          ports:
            - containerPort: 5000
