k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  # number of pods
  replicas: 1
  # this is used by the deployment to find the set of pods to control
  selector:
    matchLabels:
      component: worker
  # pod template
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: stephengrider/multi-worker
